# PharmaTurk

./: .dockerignore  .env.example  .env.production.example  .gitignore  ADMIN_BOOKS_ANALYSIS.md  ADMIN_IMPROVEMENTS_SUMMARY.md  AI_GUIDE.md  AI_MODULE_OVERVIEW.md  AI_QUICK_TEST.md  AI_TEMPLATES.md  AI_TEST_COMMANDS.md  CATALOG_ADMIN_ACTIONS_GUIDE.md  CATALOG_REFACTORING_STATUS.md  CATEGORY_ADMIN_GUIDE.md  CATEGORY_ARCHITECTURE_ANALYSIS.md  CELERY_TASKS.md  CRYPTO_PAYMENTS.md  CURRENCY_ADMIN_GUIDE.md  CURRENCY_CONVERSION_PLAN.md  CURRENCY_DEPLOYMENT_CHECKLIST.md  CURRENCY_DEPLOYMENT_GUIDE.md  CURRENCY_SYSTEM_GUIDE.md  CURRENCY_SYSTEM_READY.md  DEPLOY.md  DUPLICATE_MODERATION_GUIDE.md  INSTAGRAM_PARSER_GUIDE.md  INSTAGRAM_PARSER_IMPLEMENTATION.md  INSTAGRAM_PARSER_SUMMARY.md  PARSER_R2_GUIDE.md  README-DEV.md  README.md  REFACTORING_PLAN.md  SCRAPERS_GUIDE.md  UMMALAND_PARSER_GUIDE.md  ai_setup.sh  dev-utils.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  restart.bat  (+5 more)
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  INSTAGRAM_PARSER_QUICKSTART.md  celery_beat_schedule.py  celerybeat-schedule  ci-known-failures.txt  create_bookhaven_data.py  create_books_data.py  create_books_simple.py  create_islamic_books.py  docker-entrypoint.sh  fix_book_images.py  load_test_data.py  manage.py  poetry.toml  pyproject.toml  reproduce_issue.py  requirements.txt  run_scraper_test.py  update_book_images_style.py  verify_cleanup.py  verify_serializers.py
backend/api/: __init__.py  authentication.py  seo.py  urls.py  views.py
backend/api/tests/: test_upload.py
backend/apps/: __init__.py  http_errors.py
backend/config/: __init__.py  admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/scripts/: analyze_r2_video_duplicates.py  migrate_wave4.py  verify_margin_logic.py  verify_usdt.py
ml_service/: README.md  main.py  pyproject.toml
(+787 files in other folders)
